# learning

./: .gitignore  RBQL_SQLquery_csvdata.csv  README.md  newFile.csv  temp.csv
Companies/Celonis/: Celonis.md
Computers/: Computers.md  Loading.md  PhysicalMemory.md  Processor.md
Computers/Terminal/: Terminal.md  github.md  terminal_commands.md
CrackingTheCodingInterview6thEd/BigO/: Intro.md
CrackingTheCodingInterview6thEd/CoreKnowledge/: Intro.md  quickSort.py  whileLoops.py
DataScience/: DataScience.md
Internet (Infrastructure)/: APIDesign.md  Networking.md
Internet (Infrastructure)/Cloud/: Intro.md
Internet (Infrastructure)/Web (Service)/: Web.md
LanguagesFrameworks/: DataStructures.md  Intro.md  Languages.md  Methods.md
LanguagesFrameworks/Bazel/: Bazel.md
LanguagesFrameworks/Docker/: Docker.md
LanguagesFrameworks/Java/: Java.md
LanguagesFrameworks/Judge0/: Judge0.md
LanguagesFrameworks/PostgreSQL/: PostgreSQL.md
LanguagesFrameworks/Python/: Python.md  examples.py
Programming/: Algorithms.md  Asynchrony.md  Dagger.md  DataStructures.md  Languages.md  QuickComputing.md  git.md
Programming/Python/packaging_tutorial/: README.md  pyproject.toml  setup.cfg
Programming/Python/packaging_tutorial/lib/: lib.py
Programming/Python/packaging_tutorial/sub_package/: module.py  sub_package.py
SoftwareEngineering/: 1_Requirements.md  1_Specifying.md  2_Designing.md  3_Constructing.md  4_Testing.md  Color.md  Intro.md  OOP.md  ProjectManagement.md  SoftwareEngineering.md
Terminal/: Intro.md  Terminal.md  brew.md  terminal_commands.md
(+132 files in other folders)
