[metadata]
name = packaging_tutorial
version = 0.0.1
author = Justin Kek
author_email = justin@example.com
description = A small example package
long_description = file: README.md
long_description_content_type = text/markdown
# url = https://github.com/pypa/sampleproject
# project_urls =
#     Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
# need package_dir if packages are not in root of repo
# package_dir =
    # = src

# auto find packages in some directory
# packages = find:

# packages = 
#     lib
#     sub_package

package_dir =
    packaging_tutorial.sub_package = sub_package
    packaging_tutorial.lib = lib

python_requires = >=3.6

# [options.packages.find]
# where = src

# seems like manually including resources is not necessary? 
# [options.package_data]
# # If any package or subpackage contains *.txt or *.rst files, include them:
# * = *.csv